--- a/Consumer/pom.xml
+++ b/Consumer/pom.xml
@@ -9,26 +9,20 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <groupId>org.konoechoda</groupId>
     <artifactId>Consumer</artifactId>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>org.kono</groupId>
-            <artifactId>Provider-Common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.kono</groupId>
-            <artifactId>rpc</artifactId>
+            <groupId>org.konoechoda</groupId>
+            <artifactId>Common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
-
-
 </project>
