[update] tcp connect

--- a/RPCS/pom.xml
+++ b/RPCS/pom.xml
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.7.6</version>
+            <version>5.8.25</version>
         </dependency>
         <!-- logback -->
         <dependency>
@@ -71,6 +71,12 @@
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-x-discovery</artifactId>
             <version>5.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
