--- a/Consumer/src/main/resources/application.properties
+++ b/Consumer/src/main/resources/application.properties
@@ -1,4 +1,14 @@
 rpc.name=yurpc
 rpc.version=2.0
+rpc.host=localhost
+rpc.port=10010
 rpc.mock=false
 rpc.serializer=jdk
+rpc.registerConfig.registry=etcd
+rpc.registerConfig.address=http://192.168.18.134:2380
+rpc.registerConfig.username=
+rpc.registerConfig.password=
+rpc.registerConfig.timeout=5000
+rpc.loadBalancer=roundRobin
+rpc.retryStrategy=no
+rpc.tolerantStrategy=failFast
