--- a/Consumer/src/main/resources/application.properties
+++ b/Consumer/src/main/resources/application.properties
@@ -5,7 +5,7 @@ rpc.port=10010
 rpc.mock=false
 rpc.serializer=jdk
 rpc.registerConfig.registry=etcd
-rpc.registerConfig.address=http://192.168.18.134:2380
+rpc.registerConfig.address=http://localhost:2380
 rpc.registerConfig.username=
 rpc.registerConfig.password=
 rpc.registerConfig.timeout=5000
